# TurnipPriceBot

./: main.py  requirements.txt  test.csv
Resead/TurnipPrices/: CMakeLists.txt  TurnipPrices.cpp  TurnipPrices.h  script.js
Users/: 324025422641889281.json  example.json
