# CMakeList.txt : CMake project for TurnipPrices, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("TurnipPrices")

# Add source to this project's executable.
add_executable (TurnipPrices "TurnipPrices.cpp" "TurnipPrices.h")

# TODO: Add tests and install targets if needed.
